Fixed contact form

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 event.preventDefault();
                 
                 const serviceID = "service_ypvv75o";
-                const templateID = "Ytemplate_tkaj7d9";
+                const templateID = "template_tkaj7d9";
 
                 emailjs.sendForm(serviceID, templateID, this)
                     .then(() => {
